fix: post-v1.1.0 UI and seed data bugs (#288)
* fix: post-v1.1.0 UI and seed data bugs

- Remove 'Select Dashboard' switcher from top bar header (was showing
  next to Project Selector on desktop, confusing users)
- Remove 'Blog' link from Help & Support sidebar section
- Fix Scrum demo project not appearing in existing deployments: add
  seedScrumDemoProjectIfAbsent() called unconditionally at startup so
  the 'Mobile App — Scrum Demo' (MAS) project is back-filled for
  instances seeded before v1.1.0

* fix: frontend bugs — backlog nav, pitch drag-drop, team unassign, roadmap header

- ProjectDetail: call selectProject() before navigate('/backlog') so the
  correct project is active in context when BacklogPage mounts
- PitchBoard: add @dnd-kit drag-and-drop between status columns; wraps
  desktop board in DndContext with DroppableColumn + DraggablePitchCard
  helpers and DragOverlay; existing dropdown unchanged
- Teams: await loadData() in handleEndAssignment so the UI reflects the
  ended assignment immediately after the API call completes
- RoadmapPage: add styled section header row (matching initiative group
  style) before orphan epics block; add roadmap.orphanEpics i18n key to
  en.json and fa.json

* fix: team assignment cache miss + roadmap label clarification

- PersonService.assignToTeam, updateAssignment, endAssignment: add
  @CacheEvict(value = {"persons","teams"}) so the cached team list is
  cleared when members are added/removed — fixes the bug where newly
  assigned people did not appear under their team until hard refresh
- Teams.tsx handleSaveAssignment: await loadData() (same missing-await
  fix as the remove case)
- i18n: rename 'orphanEpics' label to 'Epics (Initiative has no dates)'
  to accurately describe that these epics DO have an initiative, it just
  has no dates set

* fix: backend bugs — cycle cache, doc permissions, orphan epics, archive team

Bug 1 (cycle stale counts): @CacheEvict on assignTeamToCycle and
removeTeamFromCycle now evic